RESOLVED FIXED58909
[chromium] didReceiveTitle API signature should not change
https://bugs.webkit.org/show_bug.cgi?id=58909
Summary [chromium] didReceiveTitle API signature should not change
Evan Martin
Reported 2011-04-19 11:19:03 PDT
[chromium] didReceiveTitle API signature should not change
Attachments
Patch (1.78 KB, patch)
2011-04-19 11:19 PDT, Evan Martin
fishd: review+
Evan Martin
Comment 1 2011-04-19 11:19:57 PDT
Evan Martin
Comment 2 2011-04-19 11:20:31 PDT
(compiling it now, but I agree that this should work)
Evan Martin
Comment 3 2011-04-19 11:30:49 PDT
Seems to compile ok.
Evan Martin
Comment 4 2011-04-19 12:03:08 PDT
Note You need to log in before you can comment on or make changes to this bug.