2011-04-19  Evan Martin  <evan@chromium.org>

Reviewed by Darin Fisher.

        [chromium] didReceiveTitle API signature should not change
        https://bugs.webkit.org/show_bug.cgi?id=58909

        My previous attempt at a temporary shim was wrong.
        This second try should correctly work with older clients.

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::didReceiveTitle):

Canonical link: https://commits.webkit.org/74016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84276 268f45cc-cd09-0410-ab3c-d52691b4dbfc